change back color

--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
 div {
-    background-color: #eee;
+    background-color: #ddd;
     color: skyblue;
     padding: 1px 10px;
     margin: 20px auto;
-    width: 50%;
+    width: 40%;
     border-radius: 20px;
     text-align: center;
     border-bottom: #357d9a solid 3px;
