--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 div {
-    background-color: #ddd;
+    background-color: #eee;
     color: skyblue;
     padding: 1px 10px;
     margin: 20px auto;
